--- a/formulario.html
+++ b/formulario.html
@@ -87,6 +87,25 @@
 					<option value="SP">São Paulo</option>
 					<option value="RJ" selected>Rio de Janeiro</option>
 					<option value="ES">Espírito Santo</option>
+					<option value="PR">Paraná</option>
+					<option value="SC">Santa Catarina</option>
+					<option value="RS">Rio Grande do Sul</option>
+				</select>
+			</div>
+
+			<div class="form-group">
+				<label for="estados">Estados</label>
+				<select name="estados" id="estados" multiple size="4">
+					<optgroup label="Sudeste">
+						<option value="SP">São Paulo</option>
+						<option value="RJ" selected>Rio de Janeiro</option>
+						<option value="ES">Espírito Santo</option>
+					</optgroup>
+					<optgroup label="Sul">
+						<option value="PR">Paraná</option>
+						<option value="SC">Santa Catarina</option>
+						<option value="RS">Rio Grande do Sul</option>
+					</optgroup>
 				</select>
 			</div>
 
