--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+		<script src="https://use.fontawesome.com/637da21888.js"></script>
 		<header>
 
 			<div class="container">
@@ -59,9 +60,7 @@
 							<li class="search">
 								<div class="input-group">
 							      <input type="text" placeholder="search...">
-							      <span class="input-group-btn">
-							        <button class="btn btn-default" type="button">Go!</button>
-							      </span>
+							      <button type="button"><i class="fa fa-search"></i></button>
 							    </div>
 							</li>
 						</ul>
@@ -73,6 +72,7 @@
 
 		</header>
 
+		
 		<script src="lib/jquery/jquery.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	</body>
