--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -73,6 +73,12 @@
 		</header>
 
 		
+		<section>
+			<div id="banner">
+				<h1>Orlando City<small>Orlando City Soccer Club</small></h1>
+			</div>
+		</section>
+
 		<script src="lib/jquery/jquery.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	</body>
