--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -59,7 +59,7 @@
 							<li><a href="#">Schedule</a></li>
 							<li class="search">
 								<div class="input-group">
-							      <input type="text" placeholder="search...">
+							      <input type="text" placeholder="search..." id="input-search">
 							      <button type="button"><i class="fa fa-search"></i></button>
 							    </div>
 							</li>
@@ -224,5 +224,30 @@
 
 		<script src="lib/jquery/jquery.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+
+
+		<script>
+			$(document).ready(function(){
+
+				$("#logotipo").on("mouseover",function(){
+					$("#banner h1").addClass("efeito");
+				}).on("mouseout", function(){
+					$("#banner h1").removeClass("efeito");
+				});
+
+
+				$("#input-search").on("focus", function(){
+
+					$("#menu li.search").addClass("ativo");
+
+				}).on("blur", function(){
+
+					$("#menu li.search").removeClass("ativo");
+
+				});
+
+			});
+		</script>
+
 	</body>
 </html>
